--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@ and are not intended to imply an endorsement by the organization.
 <li>Mike Perry, Tor Project
 <li>Mikeal Rogers, Node.js Foundation <!-- from GitHub user mikeal -->
 <li><a href="https://twitter.com/mindypreston">Mindy Preston, Docker</a>
-<li>Molly de Blanc <!-- from GitHub user mollydb -->
 <li>Nate Parsons, Planet Labs, Inc.
 <li>Nathan Sorenson, SparkFund
 <li><a href="http://neilk.net/">Neil Kandalgaonkar</a>, Sauce Labs
@@ -228,6 +227,7 @@ and are not intended to imply an endorsement by the organization.
 <li>Richard Esteban Martinez Hughes, MIT Class of 2008
 <li>Richo Healey, Stripe
 <li>Ryan Sablosky, Bard College
+<li><a href="https://twitter.com/tilmonedwards">Sean T. Edwards, Software Engineer</a>
 <li>Seth Price, RS &amp; GS Engineer, Planet, Inc.
 <li> Shaun Carland, Software Engineer, Yesware
 <li>Shauna Gordon-McKeon
@@ -239,7 +239,6 @@ and are not intended to imply an endorsement by the organization.
 <li><a href="http://stuartgeiger.com">Stuart Geiger, UC-Berkeley Institute for Data Science</a></li> <!-- from Github user staeiou -->
 <li>Ted Scharff, Planet Labs
 <li>Teresa Murphy, Marketing Associate, Indiegogo
-<li>Tom Hutchinson <!-- from GitHub user th5 -->
 <li>Thomas H. Ptacek, Latacora
 <li>Tim Chevalier, Google
 <li><a href="http://kemp59f.info">Timothy Kempf, Meadow</a> <!-- from GitHub user Fauntleroy -->
